# example-clr-linking-cmake

./: .gitignore  CMakeLists.txt  README.md
ConsoleApp/: ConsoleApp.csproj  Program.cs
ConsoleApp/Properties/: AssemblyInfo.cs
clr1/: clr1.cpp  clr1.hpp
clr2/: clr2.cpp  clr2.hpp
